--- a/style.css
+++ b/style.css
@@ -352,7 +352,8 @@ span{
         color: rgb(73,75,107);
         margin-bottom: 20px;
     }
-    .imgee{
+   
+} .imgee{
         p{
             color: rgb(118,111,106);
             font-size: 12.8px;
@@ -365,14 +366,24 @@ span{
             width: 200px;
         }
     }
-}
 .second-image{
     display: flex;
     margin-top: 10px;
-    img{
-   height: 5px;
-    width: 5px;
-}     
+    height: 40px;
+    width: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-left: 20px;
+    /* img{
+   height: 0px;
+    width: 1px;
+}      */
+    }
+    .second-image img{
+        
+        height: 30px;
+        width: 30px;
     }
     
 .imgee{
